      The needed version has been available for many stable releases.
  * checks/shared-libs.pm:
    + [JW] Don't complain about executable bit for ld.so shipped in
      multi-arch directories.
    + [JW] Don't complain about missing SONAME for position-independent
      executables.  Thanks to Reuben Thomas for the bug report.
      (Closes: #731987)
  * checks/source-copyright.pm:
    + [RA, JW] Fix handling punctuation characters in license expressions
      in machine-readable copyright files.  (Closes: #841356)
  * checks/watch-file.pm:
    + [JW] Assume that watch files containing the pgpmode option (different
      than "none") verify upstream signature.  Thanks to Robert Luberda for
      the bug report.  (Closes: #841000)

  * data/cruft/non-distributable-files:
    + [BR] Add some rapidjson files.
  * data/debhelper/compat-level:
    + [NT] Bump the deprecated debhelper compat level to match the one
      in debhelper.
  * data/files/privacy-breaker-tag-attr:
    + [BR] Apply patch from Frederic Bonnard detecting audio tags.
      (Closes: #840009)
  * data/spelling/corrections*:
    + [JW, PW] Add more corrections.

  * lib/Lintian/Unpacker.pm:
    + [NT] Use the new "do_fork()" sub to ensure works do not inherit
      the default signal handler, which could allow any number of workers
      to promote themselves to independent "masters" - effectively
      creating a fork-bomb with an ill-timed signal.
  * lib/Lintian/Util.pm:
    + [NT] Add a "do_fork()" sub to ensure signal handling is
      reset for child processes.

  * t/tests/shared-libs-non-pic-i386/debian/Makefile:
    + [JW] Pass -fno-PIE and -fno-pie to GCC, so that the test works even
      when the compiler enables PIE by default.  (Closes: #841442)

 -- Chris Lamb <lamby@debian.org>  Thu, 06 Oct 2016 19:04:23 +0100

lintian (2.5.48) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - file-name-contains-wildcard-character
      - homepage-for-cran-package-not-canonical